--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- ──────── permissions ──────── -->
+    <!-- overlay permission -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <!-- needed when a service calls startForeground() -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <!-- optional‑but‑safer for the specific type we use on 34+ -->
+    <uses-permission
+        android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK"
+        tools:targetApi="34" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,7 +24,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Immortalautomation"
-        tools:targetApi="31">
+        tools:targetApi="31"> <!-- Test target 31 and if not working switch to 34-->
+
+        <!-- ──────── launcher ──────── -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -23,6 +38,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- ──────── floating overlay (records taps) ──────── -->
+        <service
+            android:name=".ui.overlay.FloatingOverlayService"
+            android:exported="false"
+            android:foregroundServiceType="mediaPlayback" />
+
+        <!-- ──────── automation accessibility service (plays taps) ──────── -->
+        <service
+            android:name=".automation.AutomationAccessibilityService"
+            android:exported="false"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+
+            <!-- static config that tells the system we can inject gestures -->
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/automation_service_config"/>
+        </service>
+
     </application>
 
 </manifest>
